test/files/neg/t7622-missing-required.scala

// the amazing features of this trait
// are unlocked by compiling with a special plugin.
trait Amazing
